mysql db creation documented in the README. Some changes in the database config. new rails version.

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ development:
   adapter: mysql
   #socket: /var/lib/mysql/mysql.sock
   database: cryptopus_development
-  username: root
+  username: cryptopus
   password: yourpass
   host: localhost
 
