--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,21 +1,18 @@
-
-<% root_crypto = UserFixtureCrypt.new('password') %>
 root:
   uid: 0
   username: root
   givenname: Root
   surname: test
   auth: db
-  password: <%= root_crypto.password %>
-  public_key: <%= "!!binary \"#{Base64.strict_encode64(root_crypto.public_key)}\"" %>
-  private_key: <%= "!!binary \"#{Base64.strict_encode64(root_crypto.private_key)}\"" %>
+  password: '5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8'
+  public_key: <%= "!!binary \"#{FixturesHelper.read_public_key('root')}\"" %>
+  private_key: <%= "!!binary \"#{FixturesHelper.read_private_key('root')}\"" %>
 
-<% bob_crypto = UserFixtureCrypt.new('password') %>
 bob:
   username: bob
   givenname: Bob
   surname: test
   auth: db
-  password: <%= bob_crypto.password %>
-  public_key: <%= "!!binary \"#{Base64.strict_encode64(bob_crypto.public_key)}\"" %>
-  private_key: <%= "!!binary \"#{Base64.strict_encode64(bob_crypto.private_key)}\"" %>
+  password: '5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8'
+  public_key: <%= "!!binary \"#{FixturesHelper.read_public_key('bob')}\"" %>
+  private_key: <%= "!!binary \"#{FixturesHelper.read_private_key('bob')}\"" %>
