--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -16,3 +16,12 @@ bob:
   password: '5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8'
   public_key: <%= "!!binary \"#{FixturesHelper.read_public_key('bob')}\"" %>
   private_key: <%= "!!binary \"#{FixturesHelper.read_private_key('bob')}\"" %>
+
+alice:
+  username: alice
+  givenname: Alice
+  surname: test
+  auth: db
+  password: '5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8'
+  public_key: <%= "!!binary \"#{FixturesHelper.read_public_key('alice')}\"" %>
+  private_key: <%= "!!binary \"#{FixturesHelper.read_private_key('alice')}\"" %>
