--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -25,3 +25,14 @@ alice:
   password: '5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8'
   public_key: <%= "!!binary \"#{FixturesHelper.read_public_key('alice')}\"" %>
   private_key: <%= "!!binary \"#{FixturesHelper.read_private_key('alice')}\"" %>
+
+
+admin:
+  username: admin
+  givenname: Admin
+  surname: test
+  admin: true
+  auth: db
+  password: '5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8'
+  public_key: <%= "!!binary \"#{FixturesHelper.read_public_key('admin')}\"" %>
+  private_key: <%= "!!binary \"#{FixturesHelper.read_private_key('admin')}\"" %>
