--- a/test/fixtures/teams.yml
+++ b/test/fixtures/teams.yml
@@ -5,3 +5,9 @@ team1:
   private: false
   noroot: false
 
+team2:
+  name: team2
+  description: root, public
+  visible: true
+  private: false
+  noroot: false
