--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -8,3 +8,9 @@ account1:
   group: group1
   username: <%= "!!binary \"#{FixturesHelper.read_account_username('team1', 'account1')}\"" %>
   password: <%= "!!binary \"#{FixturesHelper.read_account_password('team1', 'account1')}\"" %>
+
+account2:
+  accountname: account2
+  group: group1
+  username: <%= "!!binary \"#{FixturesHelper.read_account_username('team1', 'account1')}\"" %>
+  password: <%= "!!binary \"#{FixturesHelper.read_account_password('team1', 'account1')}\"" %>
