--- a/test/fixtures/teams.yml
+++ b/test/fixtures/teams.yml
@@ -9,3 +9,10 @@ team1:
   visible: true
   private: false
   noroot: false
+
+team2:
+  name: team2
+  description: root, public
+  visible: true
+  private: false
+  noroot: false
