--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -1,18 +1,11 @@
+# encoding: utf-8
+
 #  Copyright (c) 2008-2016, Puzzle ITC GmbH. This file is part of
 #  Cryptopus and licensed under the Affero General Public License version 3 or later.
 #  See the COPYING file at the top-level directory or at
 #  https://github.com/puzzle/cryptopus.
 
-team1:
-  name: team1
-  description: root, public
-  visible: true
-  private: false
-  noroot: false
-
-team2:
-  name: team2
-  description: root, public
-  visible: true
-  private: false
-  noroot: false
+item1:
+  account: account1
+  filename: item1
+  content_type: text
