Team-Fixtures for Dis/Empower Tests #15396

--- a/test/fixtures/teams.yml
+++ b/test/fixtures/teams.yml
@@ -14,5 +14,5 @@ team2:
   name: team2
   description: root, public
   visible: true
-  private: false
-  noroot: false
+  private: true
+  noroot: true
