--- a/test/fixtures/teams.yml
+++ b/test/fixtures/teams.yml
@@ -5,14 +5,12 @@
 
 team1:
   name: team1
-  description: root, public
+  description: public
   visible: true
   private: false
-  noroot: false
 
 team2:
   name: team2
-  description: root, public
+  description: public
   visible: true
   private: true
-  noroot: true
