--- a/config/database.yml
+++ b/config/database.yml
@@ -44,7 +44,7 @@ test:
 
 production:
   database: <%= ENV['RAILS_DB_NAME'] || "cryptopus_production" %>
-  adapter: <%= ENV['RAILS_DB_ADAPTER'] || 'mysql' %>
+  adapter: <%= ENV['RAILS_DB_ADAPTER'] || 'mysql2' %>
   host: <%= ENV['RAILS_DB_HOST'] || '127.0.0.1' %>
   port: <%= ENV['RAILS_DB_PORT'] || 3306 %>
   username: <%= ENV['RAILS_DB_USERNAME'] || 'cryptopus' %>
