--- a/config/database.yml
+++ b/config/database.yml
@@ -43,12 +43,5 @@ test:
   database: <%= ENV['RAILS_DB_NAME'] || "#{Rails.root}/db/test.sqlite3" %>
 
 production:
-  database: <%= ENV['RAILS_DB_NAME'] || "cryptopus_production" %>
-  adapter: <%= ENV['RAILS_DB_ADAPTER'] || 'mysql2' %>
-  host: <%= ENV['RAILS_DB_HOST'] || '127.0.0.1' %>
-  port: <%= ENV['RAILS_DB_PORT'] || 3306 %>
-  username: <%= ENV['RAILS_DB_USERNAME'] %>
-  password: <%= ENV['RAILS_DB_PASSWORD'] %>
-  pool: 5
-  timeout: 5000
-  encoding: utf8
+  <<: *generic
+  database: <%= ENV['RAILS_DB_NAME'] || "#{Rails.root}/db/development.sqlite3" %>
