--- a/test/fixtures/teammembers.yml
+++ b/test/fixtures/teammembers.yml
@@ -6,8 +6,9 @@
 #  team_id    :integer          default("0"), not null
 #  password   :binary           not null
 #  user_id    :integer          default("0"), not null
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  created_on :datetime         not null
+#  updated_on :datetime         not null
+#  team_admin :boolean          default("0"), not null
 #
 
 #  Copyright (c) 2008-2016, Puzzle ITC GmbH. This file is part of
