--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: ruby
+cache: bundler
 addons:
   apt:
     packages:
       - libqtwebkit-dev
       - libqtwebkit4
-cache: bundler
+      - qt5-qmake
 rvm:
  - 2.2
 env:
