--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ rvm:
 env:
  global:
   - RAILS_ENV=test
-  - QMAKE=/usr/lib64/qt5/bin/qmake
+  - QMAKE=qmake
   - RAILS_DB_NAME='pitc_cryptopus_test'
   - RAILS_DB_HOST='pitc-cryptopus-test.db.puzzle.ch'
   - RAILS_DB_PORT=3306
@@ -28,5 +28,6 @@ before_script:
  - rake db:setup
  - rake geo:fetch
 script:
+ -
  - bin/rails db:environment:set RAILS_ENV=test
  - bundle exec rake ci --trace
