--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ before_install:
 install:
  - bundle install --path vendor/bundle
 before_script:
- - rake db:create
- - rake db:setup
- - rake geo:fetch
+ - bundle exec rake db:create
+ - bundle exec rake db:setup
+ - bundle exec rake geo:fetch
 script:
  - bin/rails db:environment:set RAILS_ENV=test
  - bundle exec rake ci --trace
