added frontend tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ install:
 before_script:
  - bundle exec rake db:create
  - bundle exec rake db:setup
+ - bundle exec rake db:migrate
+ - bundle exec rake db:seed
  - bundle exec rake geo:fetch
 script:
  - bundle --deployment
  - bundle exec rake ci --trace
+ - bundle exec rake test:features
