--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,15 @@ before_install:
  - sudo service mysql restart
 install:
  - bundle install --path vendor/bundle
- - xvfb-run -a bundle exec spec
 before_script:
  - bundle exec rake db:create
  - bundle exec rake db:setup
  - bundle exec rake db:migrate
  - bundle exec rake db:seed
  - bundle exec rake geo:fetch
+ - "export DISPLAY=:99.0"
+ - "sh -e /etc/init.d/xvfb start"
+ - sleep 3 # give xvfb some time to start
 script:
  - bundle --deployment
  - bundle exec rake ci --trace
