--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ before_script:
  - bundle exec rake db:migrate
  - bundle exec rake db:seed
  - bundle exec rake geo:fetch
- - "export DISPLAY=:99.0"
- - "sh -e /etc/init.d/xvfb start"
- - sleep 3 # give xvfb some time to start
+<> - "export DISPLAY=:99.0"
+<> - "sh -e /etc/init.d/xvfb start"
+<> - sleep 3 # give xvfb some time to start
 script:
  - bundle --deployment
  - bundle exec rake ci --trace
- - bundle exec rake test:features
+<> - bundle exec rake test:features
