--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: ruby
 cache: bundler
-addons:
-  firefox: 45.0
-env:
-  global:
-   - HEADLESS=true
 rvm:
  - 2.2
-
+branches:
+ only:
+  - master
+  - stable
 before_install:
  - sudo service mysql restart
 install:
@@ -18,10 +16,7 @@ before_script:
  - bundle exec rake db:migrate
  - bundle exec rake db:seed
  - bundle exec rake geo:fetch
-<> - "export DISPLAY=:99.0"
-<> - "sh -e /etc/init.d/xvfb start"
-<> - sleep 3 # give xvfb some time to start
 script:
  - bundle --deployment
  - bundle exec rake ci --trace
-<> - bundle exec rake test:features
+
