updated Dockerfile and docker-compose.yml for easy creating a development environment using docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
 version: '2'
 
 services:
-
-  cryptopus-mysql:
-    image: mysql:5.7
+  cryptopus:
+    build: .
+    image: cryptopus
+    container_name: cryptopus
+    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    volumes: 
+      - ./db:/cryptopus/db
     ports:
-      - '3306:3306'
-    environment:
-      - MYSQL_USER=cryptopus
-      - MYSQL_PASSWORD=cryptopus
-      - MYSQL_DATABASE=cryptopus_development
-      - MYSQL_ROOT_PASSWORD=cryptopus
+      - 3000:3000
