docker-compose: do not expose ports to all interfaces

--- a/config/docker/mysql/docker-compose.yml
+++ b/config/docker/mysql/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       RAILS_DB_NAME: 'cryptopus_prod'
       RAILS_DB_PORT: 3306
     ports:
-      - 8080:8080
+      - localhost:8080:8080
     links:
       - cryptopus-mysql:cryptopus-mysql
   cryptopus-mysql:
@@ -23,7 +23,5 @@ services:
     restart: always
     volumes:
       - cryptopus-mysql:/var/lib/mysql
-    ports:
-      - 3306
 volumes:
   cryptopus-mysql:
