--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
 before_install:
  - sudo service mysql restart
 install:
- - gem install bundler
+ - gem install bundler:1.17.3
  - bundle install --path vendor/bundle
 before_script:
  - bundle exec rake db:create
