Make it possible to disable ssl enforcement

--- a/config/docker/mysql/docker-compose.yml
+++ b/config/docker/mysql/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       RAILS_DB_HOST: 'cryptopus-mysql'
       RAILS_DB_NAME: 'cryptopus_prod'
       RAILS_DB_PORT: 3306
+      # RAILS_HOST_SSL: 'false' # uncomment for disabling ssl force
     ports:
       - localhost:8080:3000
     links:
