--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ BUILD
 
 # Ignore application configuration
 /config/application.yml
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
