--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+  "license": "SEE LICENSE IN COPYING",
   "dependencies": {
-    "@rails/webpacker": "5.0.1"
+    "@rails/webpacker": "5.0.1",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
