--- a/config/docker/mysql/docker-compose.yml
+++ b/config/docker/mysql/docker-compose.yml
@@ -2,25 +2,25 @@ version: '2'
 
 services:
   cryptopus:
-    image: puzzle/cryptopus:stable
+    image: cry2:latest
     container_name: cryptopus
     env_file:
-      - mysql-prod.env 
+      - mysql-prod.env
     environment:
       RAILS_DB_ADAPTER: 'mysql2'
       RAILS_DB_HOST: 'cryptopus-mysql'
       RAILS_DB_NAME: 'cryptopus_prod'
       RAILS_DB_PORT: 3306
-      # RAILS_HOST_SSL: 'false' # uncomment for disabling ssl force
+      RAILS_HOST_SSL: 'false' # uncomment for disabling ssl force
     ports:
-      - localhost:8080:3000
+      - 8080:3000
     links:
       - cryptopus-mysql:cryptopus-mysql
   cryptopus-mysql:
     image: mysql:5.7
     container_name: cryptopus-mysql
     env_file:
-      - mysql-prod.env 
+      - mysql-prod.env
     restart: always
     volumes:
       - cryptopus-mysql:/var/lib/mysql
