--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -17,7 +17,7 @@ default: &default
   cache_manifest: false
 
   # Extract and emit a css file
-  extract_css: true
+  extract_css: false
 
   static_assets_extensions:
     - .jpg
@@ -69,7 +69,7 @@ development:
     compress: true
     disable_host_check: true
     use_local_ip: false
-    quiet: false
+    quiet: true
     pretty: false
     headers:
       'Access-Control-Allow-Origin': '*'
