--- a/.dockerignore
+++ b/.dockerignore
@@ -1,23 +1,14 @@
 tmp
 log
 .sass-cache
-public/assets
-public/packs
 coverage
 tags
 BUILD
 
-.project
-.idea
-.rake_tasks~
 .tags
 .tags_swap
 
-/config/application.yml
-
+/public/assets
 /public/packs
 /public/packs-test
 /node_modules
-/yarn-error.log
-yarn-debug.log*
-.yarn-integrity
