--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ install:
  - gem install bundler:1.17.3
  - bundle install --path vendor/bundle
  - yarn
+ - yarn global add ember-cli
+ - yarn global add npm
+ - yarn config set --prefix ./frontend install ./frontend
 before_script:
  - bundle exec rake db:create
  - bundle exec rake db:setup
