--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ rvm:
  - 2.5
 branches:
  only:
+  - feature-53943-e2e-ci-job
   - stable
   - master
 before_install:
@@ -29,8 +30,10 @@ before_script:
  - bundle exec rake geo:fetch
 script:
  - bundle --deployment
- - bundle exec brakeman
  - bundle exec rake ci --trace
+ - if [ "$TRAVIS_EVENT_TYPE" = "push" ] || [ "$TRAVIS_EVENT_TYPE" = "pull_request" ]; then
+    bundle exec rake ci --trace;
+   fi;
  - if [ "$TRAVIS_EVENT_TYPE" = "cron" ] || [ "$TRAVIS_EVENT_TYPE" = "api" ]; then
     bundle exec rake ci:nightly --trace;
    fi;
