--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,15 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^1.0.0",
+    "@ember/render-modifiers": "^1.0.2",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.5.2",
-    "ember-cli": "~3.14.0",
+    "ember-changeset": "^3.3.1",
+    "ember-changeset-validations": "^3.2.0",
+    "ember-cli": "~3.15.2",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.11.1",
     "ember-cli-dependency-checker": "^3.1.0",
@@ -35,14 +38,18 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
-    "ember-data": "~3.14.0",
-    "ember-export-application-global": "^2.0.0",
+    "ember-data": "~3.15.0",
+    "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^6.7.0",
+    "ember-intl": "^4.3.1",
+    "ember-islands": "^1.5.1",
     "ember-load-initializers": "^2.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-power-select": "^3.0.4",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^5.3.0",
-    "ember-source": "~3.14.1",
+    "ember-source": "~3.15.0",
+    "ember-validated-form": "^2.0.0",
     "ember-welcome-page": "^4.0.0",
     "eslint-plugin-ember": "^7.1.0",
     "eslint-plugin-node": "^10.0.0",
@@ -51,5 +58,9 @@
   },
   "engines": {
     "node": "8.* || >= 10.*"
+  },
+  "dependencies": {
+    "clean-css": "^4.2.3",
+    "minimist": "^1.2.5"
   }
 }
