--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,15 +40,17 @@
     "ember-cli-uglify": "^3.0.0",
     "ember-data": "~3.15.0",
     "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^6.7.0",
+    "ember-fetch": "^8.0.1",
     "ember-intl": "^4.3.1",
     "ember-islands": "^1.5.1",
     "ember-load-initializers": "^2.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-power-select": "^3.0.4",
+    "ember-power-select-typeahead": "^0.8.0",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^5.3.0",
     "ember-source": "~3.15.0",
+    "ember-toggle": "^6.0.2",
     "ember-validated-form": "^2.0.0",
     "ember-welcome-page": "^4.0.0",
     "eslint-plugin-ember": "^7.1.0",
