--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "dependencies": {
     "@rails/webpacker": "5.0.1",
     "less": "^3.11.1",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.14.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.10.3",
     "less-loader": "^5.0.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "webpack-dev-server": "^3.10.3"
   }
 }
