--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,9 @@
     "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.2",
-    "ember-changeset": "^3.3.1",
-    "ember-changeset-validations": "^3.2.0",
+    "ember-auto-import": "^1.5.3",
+    "ember-changeset": "^3.3.8",
+    "ember-changeset-validations": "^3.3.2",
     "ember-cli": "~3.15.2",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.11.1",
@@ -35,17 +35,19 @@
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.0.5",
     "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-password-strength": "^2.0.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
     "ember-data": "~3.15.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
-    "ember-intl": "^4.3.1",
+    "ember-intl": "^4.4.0",
     "ember-islands": "^1.5.1",
     "ember-load-initializers": "^2.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-power-select": "^3.0.4",
+    "ember-progress-bar": "^1.0.0",
     "ember-power-select-typeahead": "^0.8.0",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^5.3.0",
@@ -56,13 +58,15 @@
     "eslint-plugin-ember": "^7.1.0",
     "eslint-plugin-node": "^10.0.0",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.9.0"
+    "qunit-dom": "^0.9.0",
+    "zxcvbn": "^4.4.2"
   },
   "engines": {
     "node": "8.* || >= 10.*"
   },
   "dependencies": {
     "clean-css": "^4.2.3",
+    "ember-cli-shims": "^1.2.0",
     "minimist": "^1.2.5"
   }
 }
