--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "ember-resolver": "^5.3.0",
     "ember-source": "~3.15.0",
     "ember-toggle": "^6.0.2",
+    "ember-truth-helpers": "^2.1.0",
     "ember-validated-form": "^2.0.0",
     "ember-welcome-page": "^4.0.0",
     "eslint-plugin-ember": "^7.1.0",
