--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "ember-cli": "~3.15.2",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.11.1",
+    "ember-cli-clipboard": "^0.14.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.0.5",
@@ -41,6 +42,7 @@
     "ember-cli-password-strength": "^2.0.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-string-helpers": "^5.0.0",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
     "ember-component-css": "^0.7.4",
