--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,13 +19,16 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "@ember/jquery": "^0.6.0",
     "@ember/optional-features": "^1.0.0",
     "@ember/render-modifiers": "^1.0.2",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.0.3",
+    "bootstrap": "^4.3.1",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.5.3",
+    "ember-bootstrap": "^3.1.4",
     "ember-changeset": "^3.3.8",
     "ember-changeset-validations": "^3.3.2",
     "ember-cli": "~3.15.2",
@@ -36,6 +39,7 @@
     "ember-cli-htmlbars": "^4.0.5",
     "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-password-strength": "^2.0.0",
+    "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
@@ -60,6 +64,7 @@
     "eslint-plugin-node": "^10.0.0",
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.9.0",
+    "sass": "^1.26.8",
     "zxcvbn": "^4.4.2"
   },
   "engines": {
