--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
+    "ember-component-css": "^0.7.4",
     "ember-data": "~3.15.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
