--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,6 +79,7 @@
     "@sentry/integrations": "^5.16.1",
     "clean-css": "^4.2.3",
     "ember-cli-shims": "^1.2.0",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "text-security": "^3.1.1"
   }
 }
