--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "ember-islands": "^1.5.1",
     "ember-load-initializers": "^2.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-notify": "^6.0.0",
     "ember-power-select": "^4.0.3",
     "ember-power-select-typeahead": "^0.8.0",
     "ember-progress-bar": "^1.0.0",
