--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "ember-auto-import": "^1.5.3",
     "ember-autofocus-modifier": "^1.0.1",
     "ember-bootstrap": "^3.1.4",
+    "ember-bootstrap-power-select": "^2.0.0",
     "ember-changeset": "^3.3.8",
     "ember-changeset-validations": "^3.3.2",
     "ember-cli": "~3.16.2",
