--- a/spec/fixtures/accounts.yml
+++ b/spec/fixtures/accounts.yml
@@ -32,3 +32,11 @@ account2:
   username: <%= "!!binary \"#{FixturesHelper.read_account_username('team2', 'account2')}\"" %>
   password: <%= "!!binary \"#{FixturesHelper.read_account_password('team2', 'account2')}\"" %>
   tag: tag
+
+ose_secret:
+  accountname: ose_secret
+  accountname: secret description
+  folder: folder1
+  category: 1
+  username: <%= "!!binary \"#{FixturesHelper.read_account_username('team1', 'ose_secret')}\"" %>
+  password: <%= "!!binary \"#{FixturesHelper.read_account_password('team1', 'ose_secret')}\"" %>
