Include ose secrets per STI and implement an encrypted, serialized data field, refs: #55319

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -63,6 +63,9 @@ Layout/ClassStructure:
 Naming/MemoizedInstanceVariableName:
   Enabled: false
 
+Naming/MethodParameterName:
+  Enabled: false
+
 # We thinks that's fine
 Rails/EnumHash:
   Enabled: false
