Update auth config

--- a/config/auth.yml
+++ b/config/auth.yml
@@ -13,3 +13,15 @@ provider: db
 #     - 'example_hostname2'
 #   basename: 'ou=users,dc=acme'
 #   portnumber: 636
+#
+
+# expample of openid connect settings
+
+# provider: openid-connect
+#
+# oicd:
+#   port: 443
+#   scheme: 'https'
+#   host: 'oicd.example.com'
+#   secret: 'verysecretsecret42'
+#   redirect_uri: 'https://oicd.example.com/auth'
