Implement oidc client external redirect url

--- a/config/auth.yml
+++ b/config/auth.yml
@@ -19,9 +19,7 @@ provider: db
 
 # provider: openid-connect
 #
-# oicd:
-#   port: 443
-#   scheme: 'https'
-#   host: 'oicd.example.com'
+# oidc:
+#   provider: 'keycloak.example.com'
 #   secret: 'verysecretsecret42'
-#   redirect_uri: 'https://oicd.example.com/auth'
+#   authorization_path: '/auth'
