--- a/config/docker/keycloak-development/auth.yml
+++ b/config/docker/keycloak-development/auth.yml
@@ -11,3 +11,4 @@ oidc:
   user_subject: preferred_username
   certs_url: http://keycloak:8180/auth/realms/cryptopus/protocol/openid-connect/certs
   additional_scopes:
+    - email
