Add github action build on stable, all pull requests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,12 @@
 name: Cryptopus CI build
 
-# Run this workflow every time a push or pull-request on master branch gets submitted
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - stable
 
   pull_request:
-    branches: [ master ]
 
   # scheduled for 2AM UTC
   schedule:
