--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
 version: '2'
 
 services:
-  cryptopus:
-    image: puzzle/cryptopus:latest
-    container_name: cryptopus-sqlite
-    environment:
-      RAILS_LOG_TO_STDOUT: 1
-      SECRET_KEY_BASE: d7220ce1111af18af11c4d93897c74e283ec2d1c6dee93965fd8d9d104724720e281ed54486844551329faca574e99f509e19f9af6ff3455c88ed10337780ccf
+  rails:
+    image: cryptopus-dev/rails
+    container_name: cryptopus-dev-rails
+    build:
+      context: ./config/docker/development
+      dockerfile: Rails.dockerfile
     ports:
-      - 8080:3000
+      - 3000:3000
     volumes:
-      - cryptopus-sqlite:/opt/app-root/src/db
+      - ./:/myapp
+      - ./tmp/seed:/seed
+      - cryptopus-dev-rails_bundle:/opt/bundle
+  # cryptopus-dev-ember:
 volumes:
-  cryptopus-sqlite:
+  cryptopus-dev-rails_bundle:
+  cryptopus-dev-ember_yarn:
