--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: '2'
 services:
   rails:
     image: cryptopus-dev/rails
-    container_name: cryptopus-dev-rails
     build:
       context: ./config/docker/development
       dockerfile: Rails.dockerfile
@@ -12,8 +11,23 @@ services:
     volumes:
       - ./:/myapp
       - ./tmp/seed:/seed
-      - cryptopus-dev-rails_bundle:/opt/bundle
-  # cryptopus-dev-ember:
+      - bundler_cache:/opt/bundle
+      - ./config/docker/development/frontend-index.html:/myapp/public/frontend-index.html:ro
+  ember:
+    image: danlynn/ember-cli:latest
+    build:
+      context: ./config/docker/development
+      dockerfile: Ember.dockerfile
+    volumes:
+      - ./frontend:/myapp
+      - ./tmp/bash_history:/root/.bash_history
+      - yarn_cache:/myapp/node_modules
+    tmpfs:
+      - /myapp/tmp
+    ports:
+      - "4200:4200"
+      - "7020:7020"
+      - "7357:7357"
 volumes:
-  cryptopus-dev-rails_bundle:
-  cryptopus-dev-ember_yarn:
+  bundler_cache:
+  yarn_cache:
