--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ spec/examples.txt
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+# docker dev setup
+.bash_history
+config/docker/development/home/rails/.yarnrc
