--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,64 +14,73 @@
     "build": "ember build",
     "build-prod": "ember build --prod",
     "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
+    "lint:hbs:fix": "ember-template-lint . --fix",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
     "test": "ember test"
   },
   "devDependencies": {
     "@ember/jquery": "^0.6.0",
-    "@ember/optional-features": "^1.0.0",
+    "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^1.0.2",
-    "@glimmer/component": "^1.0.0",
-    "@glimmer/tracking": "^1.0.0",
+    "@ember/test-helpers": "^2.1.4",
+    "@glimmer/component": "^1.0.3",
+    "@glimmer/tracking": "^1.0.3",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.3.1",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.3",
+    "ember-auto-import": "^1.10.1",
     "ember-autofocus-modifier": "^1.0.1",
     "ember-bootstrap": "^3.1.4",
     "ember-bootstrap-power-select": "^2.0.0",
     "ember-changeset": "^3.3.8",
     "ember-changeset-validations": "^3.3.2",
-    "ember-cli": "~3.19.0",
-    "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.11.1",
+    "ember-cli": "~3.24.0",
+    "ember-cli-app-version": "^4.0.0",
+    "ember-cli-babel": "^7.23.0",
     "ember-cli-clipboard": "^0.14.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "^4.0.5",
+    "ember-cli-htmlbars": "^5.3.1",
     "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-password-strength": "^2.0.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^5.0.0",
     "ember-cli-template-lint": "^1.0.0-beta.3",
-    "ember-cli-uglify": "^3.0.0",
+    "ember-cli-terser": "^4.0.1",
+    "ember-cli-update": "^0.56.0",
     "ember-component-css": "^0.7.4",
-    "ember-data": "~3.16.2",
+    "ember-data": "~3.24.0",
     "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^8.0.1",
+    "ember-fetch": "^8.0.2",
     "ember-file-upload": "^3.0.4",
     "ember-in-viewport": "^3.9.0",
     "ember-intl": "^4.4.0",
     "ember-islands": "^1.5.1",
-    "ember-load-initializers": "^2.1.0",
+    "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-notify": "^6.0.0",
+    "ember-page-title": "^6.0.3",
     "ember-power-select": "^4.0.3",
     "ember-power-select-typeahead": "^0.8.0",
     "ember-progress-bar": "^1.0.0",
-    "ember-qunit": "^4.5.1",
-    "ember-resolver": "^5.3.0",
-    "ember-source": "~3.16.2",
+    "ember-qunit": "^5.1.1",
+    "ember-resolver": "^8.0.2",
+    "ember-source": "~3.24.0",
     "ember-toggle": "^6.0.2",
     "ember-truth-helpers": "^2.1.0",
     "ember-validated-form": "^2.0.0",
     "ember-welcome-page": "^4.0.0",
-    "eslint-plugin-ember": "^7.1.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-ember": "^10.1.1",
     "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.9.0",
+    "prettier": "^2.2.1",
+    "qunit": "^2.13.0",
+    "qunit-dom": "^1.6.0",
     "sass": "^1.26.8",
     "zxcvbn": "^4.4.2"
   },
