--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^5.3.1",
     "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-moment-shim": "^3.4.0",
     "ember-cli-password-strength": "^2.0.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
@@ -61,6 +62,7 @@
     "ember-islands": "^1.5.1",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-moment": "^8.0.1",
     "ember-notify": "^6.0.0",
     "ember-page-title": "^6.0.3",
     "ember-power-select": "^4.0.3",
