--- a/frontend/package.json
+++ b/frontend/package.json
@@ -94,5 +94,12 @@
     "ember-cli-shims": "^1.2.0",
     "minimist": "^1.2.5",
     "text-security": "^3.1.1"
+  },
+  "resolutions": {
+    "hosted-git-info": ">=3.0.8",
+    "lodash": ">=4.17.21",
+    "handlebars": ">=4.7.7",
+    "url-parse": ">=1.5.0",
+    "ssri": ">=8.0.1"
   }
 }
