--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "less-loader": "^5.0.0",
     "sass-loader": "^8.0.2",
     "webpack-dev-server": "^3.10.3"
+  },
+  "resolutions": {
+    "hosted-git-info": ">=3.0.8"
   }
 }
