Fix rails 6.1 path bug, remove change locale from legacy view template

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ yarn-debug.log*
 # docker dev setup
 .bash_history
 config/docker/development/home/rails/.yarnrc
+config/docker/development/home/rails/.bundle
+config/docker/development/home/rails/.cache
