Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ yarn-debug.log*
 config/docker/development/home/rails/.yarnrc
 config/docker/development/home/rails/.bundle
 config/docker/development/home/rails/.cache
+config/docker/development/home/rails/.irb_history
+config/docker/development/home/rails/.local
