--- a/frontend/package.json
+++ b/frontend/package.json
@@ -90,6 +90,7 @@
     "node": "8.* || >= 10.*"
   },
   "dependencies": {
+    "@puzzleitc/puzzle-shell": "^1.0.0-alpha.3",
     "@sentry/browser": "^5.16.1",
     "@sentry/integrations": "^5.16.1",
     "clean-css": "^4.2.3",
