--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.2",
     "ember-file-upload": "^3.0.4",
+    "ember-i18n-iso-countries": "^1.5.0",
     "ember-in-viewport": "^3.9.0",
     "ember-intl": "^4.4.0",
     "ember-islands": "^1.5.1",
