--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,7 @@
 require: rubocop-rails
 
 AllCops:
-  TargetRubyVersion: 'gemfile'
+  TargetRubyVersion: '2.7'
   DisplayCopNames: true
   Exclude:
     - Rakefile
